# GUET-Class-Schedule

./: .gitignore  CMakeLists.txt  README.md
GUET-Class-Schedule/: CMakeLists.txt  GUET-Class-Schedule.cpp  GUET-Class-Schedule.h
GnuWin32/lib/: libcharset.la  libiconv.la
